@@ -41,5 +41,5 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Action-REST.git
-version: 0.94
+version: 0.95
 x_authority: cpan:BOBTFISH
