@@ -102,8 +102,10 @@ CONTRIBUTORS
 
     J. Shirley <jshirley@gmail.com>
 
+    Gavin Henry <ghenry@surevoip.co.uk>
+
 COPYRIGHT
-    Copyright (c) 2006-2011 the above named AUTHOR and CONTRIBUTORS
+    Copyright (c) 2006-2012 the above named AUTHOR and CONTRIBUTORS
 
 LICENSE
     You may distribute this code under the same terms as Perl itself.
