@@ -1,3 +1,9 @@
+Wed  04 Jan 2012 19:34:00 GMT - Release 0.95
+  Fix regex for JSONP parameter name to be able to include the . chatacter
+  in Catalyst::Action::Serialize::JSONP. RT#73741
+
+  Add optional location parameter to status_acceped handler. RT#73691 (ghenry)
+
 Fri  09 Dec 2011 08:35:00 GMT - Release 0.94
   Add 403 Forbidden and 302 Not Found status methods to
   Catalyst::Controller::REST (Caleb Cushing)
